--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <title>Hello!</title>
+<link rel="stylesheet" href="index.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
     <header>
-    
+        <nav class="navbar navbar-light bg-light mb-3">
+            <span class="navbar-brand mb-0">
+                <h3 class="m-2 mb-0 mt-0">Web resume</h1>
+            </span>
+        </nav>
     </header>
 
     <div class="container">
         <div id="presentation" class="media">
             <img src="profile.jpg" class="rounded-circle media-left media-object" style="width:200px" id="profilePic">
-            <div class="media-body">
-                <h1>Mateo Sapiurka Mayo</h1>
+            <div class="media-body m-2" >
+                <h1>Mateo Sapiurka</h1>
                 <a href="mailto:mateo.sapiurka@gmail.com">mateo.sapiurka@gmail.com</a>
                 <br>
                 <a href="tel: +598 98 618 713">+598 98 618 713</a>
@@ -27,32 +32,32 @@
         <div id="aboutMe" class="my-5">
             <h2>About me</h2>
             <hr>
-            <p>Bachelor of Computer Systems student searching for opportunities to improve programming skills with new technologies through parctice experiene.</p>
+            <p class="text-justify">Bachelor of Computer Systems student searching for opportunities to improve programming skills with new technologies through parctice experiene.</p>
         </div>
 
         <div id="experience" class="my-5">
             <h2>Experience</h2>
             <hr>
             <h5>Professor of Computer Science @ Escuela Integral | 2020 - Present</h3>
-            <p>Computer Science professor at Primary school, were through didactic activities and games teached computational and logical thinking to litlle kids.</p>
+            <p class="text-justify">Computer Science professor at Primary school, were through didactic activities and games teached computational and logical thinking to litlle kids.</p>
             <h5>Wemoo: Carpooling app | 2020 - Present</h3>
-            <p>CTO of a small entrepreneurship with the objective to conect people and reduce travel cost, while helping the environment.</p>
+            <p class="text-justify">CTO of a small entrepreneurship with the objective to conect people and reduce travel cost, while helping the environment.</p>
             <h5>Automated inscription to sport activities | 2020</h3>
-            <p>Due to COVID-19 pandemic, the sport club I am member, started requering online inscription for every activitie. I implemented an automated script with Phyton and Selenium WebDriver to register me automatically.</p>
+            <p class="text-justify">Due to COVID-19 pandemic, the sport club I am member, started requering online inscription for every activitie. I implemented an automated script with Phyton and Selenium WebDriver to register me automatically.</p>
             <h5>Intern @ RealPage | 2020</h3>
-            <p>On line summer internship were I first experienced the environment and dynamic of a software company. I learned the fundamentals of version control, data base managment and had my first contact with an API.</p>
+            <p class="text-justify">On line summer internship were I first experienced the environment and dynamic of a software company. I learned the fundamentals of version control, data base managment and had my first contact with an API.</p>
             <h5>Digital Transformation Responsable @ Tok Hardware store | 2019 - 2020</h3>
-            <p>After closing, the store manager contacted me asking for a solution to traslade every physicial product to an e-comerce plataform. We worked with Mercado Libre online marketplace and automated every upload with the Integraly add-in from Excel.</p>
+            <p class="text-justify">After closing, the store manager contacted me asking for a solution to traslade every physicial product to an e-comerce plataform. We worked with Mercado Libre online marketplace and automated every upload with the Integraly add-in from Excel.</p>
             <h5>Community Manager @ Bagel Factory | 2019 - Present</h3>
-            <p>Family business, I am in charge of the social networks, content creation and online attention service.</p>
+            <p class="text-justify">Family business, I am in charge of the social networks, content creation and online attention service.</p>
             <h5>Director of Marketing and Communications @ Jazit Hanoar | 2019</h3>
-            <p>My first experience as a Team Leader. I headed a team of 12 people that was in charge of the promotion of the organization's weekly activities.</p>
+            <p class="text-justify">My first experience as a Team Leader. I headed a team of 12 people that was in charge of the promotion of the organization's weekly activities.</p>
             <h5>Shnat Hajshara @ Masa Journey | 2018</h3>
-            <p>Year long program I took in Israel after graduating high school, were I learn a lot about volunteering and leadership while improving my hebrew.</p>
+            <p class="text-justify">Year long program I took in Israel after graduating high school, were I learn a lot about volunteering and leadership while improving my hebrew.</p>
             <h5>Sales @ Giro Didactico | 2017</h3>
-            <p>First job experience, connected through "My first job experience" program from Escuela Integral. I was part of the sales staff of a toy store during December, one of the most demanding times of the year.</p>
+            <p class="text-justify">First job experience, connected through "My first job experience" program from Escuela Integral. I was part of the sales staff of a toy store during December, one of the most demanding times of the year.</p>
             <h5>Youth Leader @ Jazit Hanoar | 2016 - 2018</h3>
-            <p>Leader of a group of kids of 11 and 12 years old. This gave me my first experiences with leadership, communication skills, and team work, wich I continue to develop until today.</p>
+            <p class="text-justify">Leader of a group of kids of 11 and 12 years old. This gave me my first experiences with leadership, communication skills, and team work, wich I continue to develop until today.</p>
         </div>
 
         <div id="education" class="my-5">
